Fixing bug 180816. Avoid construction of an nsAutoString every time we open a container in the sink when the nsAutoString is only needed when dealing with textarea tags.